--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ JENKINS_CONTAINER_PORT=8080
 WEBHOOK_CONTAINER_PORT=9000
 ADMINER_CONTAINER_PORT=8080
 PHPMYADMIN_CONTAINER_PORT=80
+PGADMIN_CONTAINER_PORT=80
 REDIS_WEBUI_CONTAINER_PORT=80
 ELASTICSEARCH_HOST_HTTP_PORT=9200
 FUSIONAUTH_CONTAINER_PORT=9011
@@ -151,6 +152,12 @@ ME_CONFIG_MONGODB_AUTH_PASSWORD=${API_DATABASE_PASSWORD}
 
 ### ADMINER ###############################################
 ADMINER_DESIGN=galkaev
+
+### PGADMIN ###############################################
+PGADMIN_DEFAULT_EMAIL=user@local.test
+PGADMIN_DEFAULT_PASSWORD=secret
+PGADMIN_LISTEN_ADDRESS=0.0.0.0
+PGADMIN_LISTEN_PORT=80
 
 ### TRAEFIK #################################################
 
