--- a/examples/ecosystem.yaml
+++ b/examples/ecosystem.yaml
@@ -1,7 +1,7 @@
 apps:
   - name: "frontend"
     cwd: ./frontend
-    script: ./frontend/node_modules/nuxt/bin/nuxt.js
+    script: ./node_modules/nuxt/bin/nuxt.js
     # args: start
     instances: 1
     exec_mode: fork
@@ -18,7 +18,7 @@ apps:
       PORT: 3000
   - name: "api"
     cwd: ./api
-    script: ./api/server.js
+    script: ./server.js
     args: --dev
     instances: 1
     exec_mode: fork
