Configures traefik for easier production edits

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ NETWORKS_DRIVER=bridge
 # You may add flags to the path `:cached`, `:delegated`. When using Docker Sync add `:nocopy`
 APP_CODE_CONTAINER_FLAG=:cached
 
-DATA_PATH_HOST=~/.js/data
+DATA_PATH_HOST=~/.docker/data
 
 ### Docker compose files ##################################
 
@@ -21,7 +21,7 @@ WORKSPACE_TIMEZONE=Africa/Lusaka
 COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names. This is useful if you have multiple projects that use laradock to have seperate containers per project.
-COMPOSE_PROJECT_NAME=local
+COMPOSE_PROJECT_NAME=global
 
 ### Docker Sync ###########################################
 
@@ -56,10 +56,10 @@ API_DATABASE_URL=jdbc:postgresql
 API_DATABASE_PORT=5432
 API_DATABASE_SRV=false
 # API_DATABASE_NAME=
-API_DATABASE_USER=default
-API_DATABASE_PASSWORD=secret
+API_DATABASE_USER=stcvps
+API_DATABASE_PASSWORD=FFjbJ2LQ5xpj9FYkae4CQNC
 API_DATABASE_ROOT_USER=root
-API_DATABASE_ROOT_PASSWORD=root
+API_DATABASE_ROOT_PASSWORD=FFjbJ2LQ5xpj9FYkae4CQNC
 API_DATABASE_SSL=false
 API_DATABASE_AUTHENTICATION_DATABASE=admin
 
@@ -174,8 +174,8 @@ REDIS_PORT=6379
 REDIS_CLUSTER_PORT_RANGE=7000-7005
 
 ### REDISWEBUI #########################################
-REDIS_WEBUI_USERNAME=default
-REDIS_WEBUI_PASSWORD=secret
+REDIS_WEBUI_USERNAME=stcvps
+REDIS_WEBUI_PASSWORD='b0mb5away!!'
 REDIS_WEBUI_CONNECT_HOST=redis
 REDIS_WEBUI_CONNECT_PORT=6379
 REDIS_WEBUI_PORT=9987
